@@ -128,6 +128,12 @@ extern "C" {
       ACTIVESETS[nset] = PDFSetHandler(path); //< @todo Will be wrong if a structured path is given
   }
 
+  /// Load a PDF set (non-multiset version)
+  void initpdfset_(const char* setpath, int setpathlength) {
+    int nset1 = 1;
+    initpdfsetm_(nset1, setpath, setpathlength);
+  }
+
 
   /// Load a PDF set by name
   void initpdfsetbynamem_(int& nset, const char* setname, int setnamelength) {
@@ -142,21 +148,29 @@ extern "C" {
       ACTIVESETS[nset] = PDFSetHandler(name);
   }
 
-  void initpdf_(int& nset) {
-    // Do nothing - only for compatibility with ThePEG configure script for now.
+  /// Load a PDF set by name (non-multiset version)
+  void initpdfsetbyname_(const char* setname, int setnamelength) {
+    int nset1 = 1;
+    initpdfsetbynamem_(nset1, setname, setnamelength);
   }
 
 
-  /// Load a PDF in current set.
+  /// Load a PDF in current set
   void initpdfm_(int& nset, int& nmember) {
     if (ACTIVESETS.find(nset) == ACTIVESETS.end())
       throw LHAPDF::UserError("Trying to use LHAGLUE set #" + LHAPDF::to_str(nset) + " but it is not initialised");
     ACTIVESETS[nset].loadMember(nmember);
   }
 
+  /// Load a PDF in current set (non-multiset version)
+  void initpdf_(int& nmember) {
+    int nset1 = 1;
+    initpdfm_(nset1, nmember);
+  }
 
-  /// Get xf(x) values for common partons from current PDF.
-  void evolvepdfm_(int& nset, double& x, double& q , double* fxq) {
+
+  /// Get xf(x) values for common partons from current PDF
+  void evolvepdfm_(int& nset, double& x, double& q, double* fxq) {
     if (ACTIVESETS.find(nset) == ACTIVESETS.end())
       throw LHAPDF::UserError("Trying to use LHAGLUE set #" + LHAPDF::to_str(nset) + " but it is not initialised");
     // Evaluate for the LHAPDF5 standard partons
@@ -169,8 +183,14 @@ extern "C" {
     }
   }
 
+  /// Get xf(x) values for common partons from current PDF (non-multiset version)
+  void evolvepdf_(double& x, double& q, double* fxq) {
+    int nset1 = 1;
+    evolvepdfm_(nset1, x, q, fxq);
+  }
 
-  /// Get photon PID xfx value from current PDF.
+
+  /// Get photon PID xfx value from current PDF
   void evolvepdfphotonm_(int& nset, double& x, double& q, double& fxq, double& photonparam) {
     if (ACTIVESETS.find(nset) == ACTIVESETS.end())
       throw LHAPDF::UserError("Trying to use LHAGLUE set #" + LHAPDF::to_str(nset) + " but it is not initialised");
@@ -182,27 +202,68 @@ extern "C" {
     }
   }
 
-  void evolvepdfpm_(int& a, double& b, double& c, double& d, int& e, double& f) {
-      //Do nothing for now (this function is declared in ThePEG's LHAPDF interface).
+  /// Get photon PID xfx value from current PDF (non-multiset version)
+  void evolvepdfphoton_(double& x, double& q, double& fxq, double& photonparam) {
+    int nset1 = 1;
+    evolvepdfphotonm_(nset1, x, q, fxq, photonparam);
   }
 
-  // Following three functions are also declared in ThePEG's LHAPDF interface
-  void numberpdfm_(int& a, int& b){
+
+  /// @todo Implement, tidy, and document the following functions:
+
+  /// @todo Doc
+  void evolvepdfpm_(int& nset, double& b, double& c, double& d, int& e, double& f) {
+    /// @todo Implement me! (and improve param names)
   }
-  void getnfm_(int& a, double& b){
+
+  /// @todo Doc
+  /// @todo Improve param names
+  void evolvepdfp_(double& b, double& c, double& d, int& e, double& f) {
+    int nset1 = 1;
+    evolvepdfpm_(nset1, b, c, d, e, f);
   }
+
+
+  /// @todo Doc
+  void numberpdfm_(int& nset, int& numpdf) {
+    /// @todo Implement me!
+  }
+
+  /// @todo Doc
+  void numberpdf_(int& numpdf) {
+    int nset1 = 1;
+    numberpdfm_(nset1, numpdf);
+  }
+
+
+  /// @todo Doc
+  void getnfm_(int& nset, double& nf) {
+    /// @todo Implement me! (and improve param names)
+  }
+
+  /// @todo Doc
+  void getnf_(double& nf){
+    int nset1 = 1;
+    getnfm_(nset1, nf);
+  }
+
+
+  /// @todo Doc and better arg name
   void lhaprint_(int& a){
+    // Do nothing for now
+    /// @todo Can this be mapped?
   }
 
 
-  /// Set LHAPDF parameters
+  /// @brief Set LHAPDF parameters
+  ///
+  /// Does nothing for now
   void setlhaparm_(const char* par, int parlength) {
-    // Do nothing for now
     /// @todo Can any Fortran LHAPDF params be usefully mapped?
   }
 
 
-  /// @todo Add mapping of the xfx_ etc. functions for PYTHIA6 and friends. Use of LHAGLUE PDFLIB codes?
+  /// @todo Add mapping of the xfx_ etc. functions for PYTHIA6 etc.
 
 
 }
